[package]
name = "beerbucket"
version = "0.1.0"
authors = ["Alexej Berger", "Björn Barschtipan"]
edition = "2018"
readme = "README.md"

[[bin]]
name = "beerbucket-server"
path = "src/main.rs"

[dependencies]
actix = "0.9.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
env_logger = "0.7.1"
rand = "0.7.3"
